--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,21 +1,22 @@
 <section class="container">
 
-  <form class="formulario" action="">
-      <h2 class="formulario__titulo">Nova Transferência</h2>
+  <!--AQUI NÓS TEMOS UMA ANOTAÇÃO PRÓPRIA DO ANGULAR, QUE OBTEMOS PELA IMPORTAÇÃO DO FormsModule-->
+  <form class="formulario" (ngSubmit)="transferir()">
+    <h2 class="formulario__titulo">Nova Transferência</h2>
 
-      <div class="form-field">
-        <label class="form-field__label" for="valor">Valor</label>
-        <input class="form-field__input" type="text" id="valor">
-      </div>
+    <div class="form-field">
+      <label class="form-field__label" for="valor">Valor</label>
+      <input class="form-field__input" type="text" id="valor">
+    </div>
 
-      <div class="form-field">
-        <label class="form-field__label" for="destino">Destino</label>
-        <input class="form-field__input" type="text" id="destino">
-      </div>
+    <div class="form-field">
+      <label class="form-field__label" for="destino">Destino</label>
+      <input class="form-field__input" type="text" id="destino">
+    </div>
 
-      <div class="botao-wrapper">
-        <button class="botao">Transferir</button>
-      </div>
-    </form>
+    <div class="botao-wrapper">
+      <button class="botao" type="submit">Transferir</button>
+    </div>
+  </form>
 
 </section>
