--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -6,12 +6,14 @@
 
     <div class="form-field">
       <label class="form-field__label" for="valor">Valor</label>
-      <input class="form-field__input" type="text" id="valor">
+      <input class="form-field__input" type="text" id="valor" [(ngModel)]="valor" name="valor">
+      <!--SE EU INFORMAR APENAS ngModel, O ANGULAR VAI ESPERAR QUE SEJA PASSADA APENAS UMA STRING-->
+      <!--SE EU INFORMAR [(ngModel)], O ANGULAR VAI PASSAR UMA VARIÁVEL-->
     </div>
 
     <div class="form-field">
       <label class="form-field__label" for="destino">Destino</label>
-      <input class="form-field__input" type="text" id="destino">
+      <input class="form-field__input" type="text" id="destino" [(ngModel)]="destino" name="destino">
     </div>
 
     <div class="botao-wrapper">
