--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-nova-transferencia></app-nova-transferencia>
+<app-nova-transferencia (aoTransferir)="transferir($event)"></app-nova-transferencia>
+<!--O VALOR FOI EMITIDO NA CLASSE nova-transferencia.component.ts E ESTÁ SENDO PROPAGADO AQUI-->
+
+<p>Valor: {{valor}}</p>
+<p>Destino: {{destino}}</p>
