--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-nova-transferencia (aoTransferir)="transferir($event)"></app-nova-transferencia>
 <!--O VALOR FOI EMITIDO NA CLASSE nova-transferencia.component.ts E ESTÁ SENDO PROPAGADO AQUI-->
 
-<p>Valor: {{transferencia?.valor}}</p>
-<p>Destino: {{transferencia?.destino}}</p>
-
-<app-extrato></app-extrato>
+<app-extrato [transferencia]="transferencia"></app-extrato>
