--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nova-transferencia (aoTransferir)="transferir($event)"></app-nova-transferencia>
 <!--O VALOR FOI EMITIDO NA CLASSE nova-transferencia.component.ts E ESTÁ SENDO PROPAGADO AQUI-->
 
-<app-extrato [transferencia]="transferencia"></app-extrato>
+<app-extrato [transferencias]="transferencias"></app-extrato>
