--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -6,7 +6,7 @@
 
     <div class="form-field">
       <label class="form-field__label" for="valor">Valor</label>
-      <input class="form-field__input" type="text" id="valor" [(ngModel)]="valor" name="valor">
+      <input class="form-field__input" type="number" id="valor" [(ngModel)]="valor" name="valor">
       <!--SE EU INFORMAR APENAS ngModel, O ANGULAR VAI ESPERAR QUE SEJA PASSADA APENAS UMA STRING-->
       <!--SE EU INFORMAR [(ngModel)], O ANGULAR VAI PASSAR UMA VARIÁVEL-->
     </div>
